chore: use more specific selector for alert close button to avoid overlapping by ".button" class

--- a/src/alert/alert.css
+++ b/src/alert/alert.css
@@ -81,7 +81,7 @@
   margin-right: unit;
 }
 
-.close {
+.close.close {
   position: absolute;
   top: 2px;
   right: 0;
